# ScopeChecker

./: CMakeLists.txt  README.md  check-all.py
src/: CMakeLists.txt  actions.hpp  config.hpp.in  driver.cpp  plugin.cpp
